# ResumePro

./: .gitignore  README.md  action_server.py  app.py  ats-results.html  index.html  main.py  package-lock.json  package.json  pyproject.toml
.windsurf/rules/: careerdevelopmentproject.md
ai_operations/: chains.py  utility_function.py  utils.py
ai_operations/appendix/: action_server.py
ai_operations/prompts/: prompts.yml
db_operations/: utility_db.py
frontend/: next.config.js  package-lock.json  package.json
frontend/pages/: _app.js  adhoc-candidate-ranking.js  bulk-import.js  cover-letter.js  index.js  index.js.bak  insights.js  insights_backup.js  query.js  relevant-candidates.js  relevant-candidates.js.bak  request.js
frontend/src/: App.js
frontend/src/components/: Navigation.js
frontend/src/context/: PdfTextContext.js  ToastContext.js
rough_work/: Untitled.ipynb  chain_testing.ipynb  db_testing.ipynb  randon
rough_work/.virtual_documents/: Untitled.ipynb
templates/: index.html
